Add woo page styles changes

--- a/wp-content/themes/mg-theme/dev/src/scss/partials/_woo.scss
+++ b/wp-content/themes/mg-theme/dev/src/scss/partials/_woo.scss
@@ -1,6 +1,11 @@
 .woocommerce{
   &-cart, &-checkout{
     overflow-x: hidden;
+    padding-top: 101px;
+    .header{
+      top: 0 !important;
+      position: fixed !important;
+    }
     table.cart{
       img{
         width: 100px;
