--- a/wp-content/themes/mg-theme/dev/src/scss/partials/_woo.scss
+++ b/wp-content/themes/mg-theme/dev/src/scss/partials/_woo.scss
@@ -73,13 +73,15 @@ body.woocommerce{
       &-first, &-last{
         width: calc(50% - 15px);
       }
-      &#billing_country_field{
+      &#billing_address_1_field{
         @media(min-width:768px){
           width: calc(70% - 15px);
           float: left;
+          clear: unset;
           & + .form-row{
             width: calc(30% - 15px);
             float: right;
+            clear: unset;
           }
         }
       }
