--- a/wp-content/themes/mg-theme/dev/src/scss/partials/_woo.scss
+++ b/wp-content/themes/mg-theme/dev/src/scss/partials/_woo.scss
@@ -82,6 +82,7 @@ body.woocommerce{
             width: calc(30% - 15px);
             float: right;
             clear: unset;
+            padding-top: 16.4px;
           }
         }
       }
@@ -98,7 +99,8 @@ body.woocommerce{
         border: 1px solid rgba(#000, .7);
         box-sizing: border-box;
         padding: 0 15px;
-        background: none;
+        background: rgba(207, 200, 216, .05);
+        border-radius: 4px;
       }
       textarea{
         min-height: 150px;
