--- a/wp-content/themes/mg-theme/dev/src/scss/partials/_woo.scss
+++ b/wp-content/themes/mg-theme/dev/src/scss/partials/_woo.scss
@@ -96,10 +96,10 @@ body.woocommerce{
         display: block;
         width: 100%;
         height: 45px;
-        border: 1px solid rgba(#000, .7);
+        border: 1px solid #cfc8d8;
         box-sizing: border-box;
         padding: 0 15px;
-        background: rgba(207, 200, 216, .05);
+        background: rgba(207,200,216,0.5);
         border-radius: 4px;
       }
       textarea{
@@ -179,9 +179,12 @@ body.woocommerce{
       }
     }
     table.shop_table{
-      border-color: rgba(#000, .7);
+      border-color: #cfc8d8;
       td, th{
-        border-color: rgba(#000, .7);
+        border-color: #cfc8d8;
+      }
+      th{
+        background: rgba(207,200,216,0.5);
       }
     }
   }
