--- a/wp-content/themes/mg-theme/dev/src/scss/partials/_woo.scss
+++ b/wp-content/themes/mg-theme/dev/src/scss/partials/_woo.scss
@@ -99,7 +99,7 @@ body.woocommerce{
         border: 1px solid #cfc8d8;
         box-sizing: border-box;
         padding: 0 15px;
-        background: rgba(207,200,216,0.5);
+        background: rgba(207,200,216,0.3);
         border-radius: 4px;
       }
       textarea{
@@ -184,7 +184,9 @@ body.woocommerce{
         border-color: #cfc8d8;
       }
       th{
-        background: rgba(207,200,216,0.5);
+        background: rgba(207,200,216, 0.3);
+        font-weight: 400;
+        font-size: 12px;
       }
     }
   }
