--- a/wp-content/themes/mg-theme/dev/src/scss/partials/_woo.scss
+++ b/wp-content/themes/mg-theme/dev/src/scss/partials/_woo.scss
@@ -66,6 +66,18 @@ body.woocommerce{
     font-weight: 500;
     margin-bottom: 15px;
   }
+  .wc-stripe-elements-field, .wc-stripe-iban-element-field {
+    border: 1px solid #cfc8d8;
+    margin: 0;
+    padding: 10px 0;
+    background: #fff;
+    outline: 0;
+    border-radius: 4px;
+  }
+  #add_payment_method #payment div.form-row, .woocommerce-cart #payment div.form-row, .woocommerce-checkout #payment div.form-row{
+    padding: 0;
+    margin: 0 0 6px;
+  }
   form{
     .form-row{
       padding: 0;
@@ -101,6 +113,11 @@ body.woocommerce{
         padding: 0 15px;
         background: rgba(207,200,216,0.3);
         border-radius: 4px;
+        &#wc-stripe-new-payment-method {
+          display: inline-block;
+          float: left;
+          height: auto;
+        }
       }
       textarea{
         min-height: 150px;
