--- a/wp-content/themes/mg-theme/dev/src/scss/partials/_woo.scss
+++ b/wp-content/themes/mg-theme/dev/src/scss/partials/_woo.scss
@@ -169,23 +169,28 @@ body.woocommerce{
       }
     }
   }
+  .woocommerce-NoticeGroup.woocommerce-NoticeGroup-checkout {
+    width: 100%;
+  }
   form.checkout{
     position: relative;
     @media(min-width:768px){
       display: flex;
       justify-content: space-between;
+      flex-wrap: wrap;
     }
     .col2-set{
       @media(min-width:768px){
         width: calc(50% - 15px);
       }
       & + h3{
-        @media(min-width:768px){
-          position: absolute;
-          width: calc(50% - 15px);
-          top: 0;
-          left: calc(50% + 30px);
-        }
+        display: none;
+        // @media(min-width:768px){
+        //   position: absolute;
+        //   width: calc(50% - 15px);
+        //   top: 0;
+        //   left: calc(50% + 30px);
+        // }
       }
       .col-1, .col-2{
         float: none;
@@ -198,7 +203,7 @@ body.woocommerce{
     .woocommerce-checkout-review-order{
       @media(min-width:768px){
         width: calc(50% - 15px);
-        padding-top: 52.5px;
+        padding-top: 65.1px;
       }
     }
     table.shop_table{
