--- a/wp-content/themes/mg-theme/dev/src/scss/partials/_woo.scss
+++ b/wp-content/themes/mg-theme/dev/src/scss/partials/_woo.scss
@@ -184,13 +184,14 @@ body.woocommerce{
         width: calc(50% - 15px);
       }
       & + h3{
+        margin-top: 30px;
+        @media(min-width:768px){
         display: none;
-        // @media(min-width:768px){
         //   position: absolute;
         //   width: calc(50% - 15px);
         //   top: 0;
         //   left: calc(50% + 30px);
-        // }
+        }
       }
       .col-1, .col-2{
         float: none;
@@ -201,6 +202,7 @@ body.woocommerce{
       }
     }
     .woocommerce-checkout-review-order{
+      padding-top: 10px;
       @media(min-width:768px){
         width: calc(50% - 15px);
         padding-top: 65.1px;
