--- a/wp-content/themes/mg-theme/dev/src/scss/partials/_woo.scss
+++ b/wp-content/themes/mg-theme/dev/src/scss/partials/_woo.scss
@@ -16,6 +16,14 @@ body.woocommerce{
         height: auto;
       }
     }
+    &#page-id-9{
+      .page-title, &.woocommerce-notice{
+        text-align: center;
+      }
+      &.woocommerce-notice{
+        margin-bottom: 15px;
+      }
+    }
     .sale{
       display: none;
     }
