--- a/wp-content/themes/mg-theme/dev/src/scss/partials/_woo.scss
+++ b/wp-content/themes/mg-theme/dev/src/scss/partials/_woo.scss
@@ -16,7 +16,7 @@ body.woocommerce{
         height: auto;
       }
     }
-    &#page-id-9{
+    &.page-id-9{
       .page-title, &.woocommerce-notice{
         text-align: center;
       }
