--- a/wp-content/themes/mg-theme/dev/src/scss/partials/_woo.scss
+++ b/wp-content/themes/mg-theme/dev/src/scss/partials/_woo.scss
@@ -17,10 +17,10 @@ body.woocommerce{
       }
     }
     &.page-id-9{
-      .page-title, &.woocommerce-notice{
+      .page-title, .woocommerce-notice{
         text-align: center;
       }
-      &.woocommerce-notice{
+      .woocommerce-notice{
         margin-bottom: 15px;
       }
     }
