--- a/wp-content/themes/mg-theme/dev/src/scss/partials/_woo.scss
+++ b/wp-content/themes/mg-theme/dev/src/scss/partials/_woo.scss
@@ -21,7 +21,8 @@ body.woocommerce{
         text-align: center;
       }
       .woocommerce-notice{
-        margin-bottom: 15px;
+        margin-bottom: 30px;
+        font-size: 20px;
       }
     }
     .sale{
