--- a/wp-content/themes/mg-theme/dev/src/scss/partials/_woo.scss
+++ b/wp-content/themes/mg-theme/dev/src/scss/partials/_woo.scss
@@ -24,6 +24,12 @@ body.woocommerce{
         margin-bottom: 30px;
         font-size: 20px;
       }
+      .woocommerce-customer-details{
+        address{
+          display: inline-block;
+          width: auto;
+        }
+      }
     }
     .sale{
       display: none;
